[gd_scene load_steps=14 format=3 uid="uid://bn1e48cthtpbf"]

[ext_resource type="Script" path="res://Creatures/Ants/AntFollower.gd" id="1_k2u5v"]
[ext_resource type="Texture2D" uid="uid://63nlyw8xijmb" path="res://Assets/Creatures/Ants/1298259.svg" id="2_umxcd"]
[ext_resource type="Shader" path="res://Shader/Outline2D.gdshader" id="3_rc3vj"]
[ext_resource type="AudioStream" uid="uid://cau8q5bokl4ou" path="res://Assets/SoundFX/Block 1.wav" id="4_xp4vj"]
[ext_resource type="AudioStream" uid="uid://d3w84ge85epav" path="res://Assets/SoundFX/Kick 15.wav" id="5_x6si1"]
[ext_resource type="AudioStream" uid="uid://bmkf2x5p4dibi" path="res://Assets/SoundFX/652470__mediagruppen__man-screaming.mp3" id="6_623me"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_viftq"]
shader = ExtResource("3_rc3vj")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 20.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ylipx"]
size = Vector2(220, 140)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qubge"]
size = Vector2(800, 800)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6awiy"]
size = Vector2(400, 400)

[sub_resource type="Animation" id="Animation_5fag5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../die:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ld67l"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../die:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.933333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n0bnm"]
_data = {
"RESET": SubResource("Animation_5fag5"),
"die": SubResource("Animation_ld67l")
}

[node name="follower_ant" type="CharacterBody2D" groups=["ant"]]
collision_layer = 4
collision_mask = 12
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_k2u5v")

[node name="Ant" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.2, 0.212)
texture = ExtResource("2_umxcd")

[node name="Collectible" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_viftq")
position = Vector2(-57.6174, 8.00004)
rotation = 1.5708
scale = Vector2(0.102397, 0.125594)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-14, -1)
shape = SubResource("RectangleShape2D_ylipx")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_qubge")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="IdleArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="IdleArea"]
shape = SubResource("RectangleShape2D_6awiy")

[node name="collect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_xp4vj")
volume_db = 5.0
max_distance = 10000.0

[node name="drop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_x6si1")
volume_db = 5.0
max_distance = 10000.0

[node name="Timer2" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Timer")
libraries = {
"": SubResource("AnimationLibrary_n0bnm")
}

[node name="collectAnt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_x6si1")
volume_db = 7.518
pitch_scale = 8.53

[node name="die" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_623me")
pitch_scale = 1.67

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="IdleArea" to="." method="_on_idle_area_body_entered"]
[connection signal="body_exited" from="IdleArea" to="." method="_on_idle_area_body_exited"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
